Fixes - Style - Changed Condition label to Trigger - Made Filterbar stick to the top - Corrected z-Indexes

--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -4,11 +4,11 @@
   border-right: thin solid var(--fg-color--translucent-200);
   display: flex;
   flex-direction: column;
-  left: 0;
-  max-height: 100%;
+  // left: 0;
+  max-height: calc(100vh - 5rem);
   position: sticky;
   position: -webkit-sticky;
-  top: 0;
+  top: 5rem;
 
   &__logo {
     height: 3rem;
