--- a/src/screens/Alarms/components/FilterBar/styles.scss
+++ b/src/screens/Alarms/components/FilterBar/styles.scss
@@ -1,10 +1,14 @@
 .filter-bar {
   align-items: flex-end;
+  background-color: var(--bg-color);
   border-bottom: thin solid var(--fg-color--translucent-200);
   display: flex;
   flex-wrap: wrap;
   flex-shrink: 0;
-  padding: 2rem;
+  padding: 1rem 2rem 2rem;
+  position: sticky;
+  top: calc(5rem + 1px);
+  z-index: var(--z-toolbar);
 
   &__field {
     height: min-content;
@@ -44,10 +48,7 @@
 
 @media screen and (max-width: 500px) {
   .filter-bar{
-    flex-wrap: wrap;
+    top: calc(4rem + 5px);
 
-    &__field {
-      margin-bottom: 0.5rem;
-    }
   }
 }
